# cosense_cloud

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  LICENSE  README.md  WORKPLAN.md  docker-compose.override.yml  docker-compose.yml  firebase.json
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  activity.py  config.py  gemini.py  main.py
control-center-webapp/: Dockerfile  README.md  UI_SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
control-center-webapp/src/: App.tsx  main.tsx  styles.css  types.ts
control-center-webapp/src/components/: AskGemini.tsx  EntityDrawer.tsx  MetricsPanel.tsx  ResetDialog.tsx  WarehouseMap.tsx
control-center-webapp/src/hooks/: useGemini.ts  useMap.ts  usePerformanceReport.ts  usePipelineActivity.ts  useSimState.ts
control-center-webapp/src/pages/: PipelineActivityPage.tsx
data/: automl-training-data.csv
deploy/: cloud-run.sh  firebase-hosting.sh  setup-gcp.sh  teardown.sh
docs/: CoSense_Cloud_Video_Script_v5_FINAL.md  ai-alerting-deep-dive.md  flink-ai-pipeline.md  kafka-topics.md
flink-sql/: 01-source-tables.sql  02-anomaly-detection.sql  03-gemini-enrichment.sql  04-shift-summaries-simple.sql  04-shift-summaries.sql
flink-sql/ready-to-run/: 01-source-tables.sql  04-shift-summaries-confluent.sql
llm/: README.md
maps/: zone-c.json
mock-classifier/: main.py
observability/: README.md
schemas/: __init__.py  coordination.py  operators.py  pyproject.toml  telemetry.py  warehouse_map.py
simulator/: Dockerfile  README.md  pyproject.toml
simulator/maps/: zone-c.json
simulator/src/: __init__.py  config.py  entities.py  main.py  pathfinding.py  world.py
simulator/tests/: README.md  __init__.py
simulator/tests/integration/: __init__.py  conftest.py  test_api.py
simulator/tests/unit/: conftest.py  test_entities.py  test_scenarios.py  test_world.py
stream-processor/: Dockerfile  README.md  pyproject.toml
stream-processor/src/: __init__.py  config.py  main.py  risk.py
