[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosense-schemas"
version = "0.1.0"
description = "Shared Pydantic schemas for CoSense Cloud"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
