[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosense-simulator"
version = "0.1.0"
description = "Headless warehouse simulator for CoSense Cloud"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "confluent-kafka>=2.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
