[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosense-stream-processor"
version = "0.1.0"
description = "Stream processor for CoSense Cloud - windowed joins and coordination decisions"
requires-python = ">=3.11"
dependencies = [
    "quixstreams>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
